Version
  Added delete offline nodes to NodesViewAdvanced menu

Version 0.18.0
  Make some texts look nicer. (PR #9)
  Fixed MFD dialog not listing file without timestamp
  replaced channel names with new generic names dialog to support other tokens
  altered export to replace channels page with names page
  Altered import for new names page (retains import of channel page)
  Added EventVariableDual component

Version 0.17.1
  Added eventIdentityShowVariables to EventsListByNode
  replaced requestAllEventsByIndex with requestAllEventsByNENRD
  Commented out 'saved indexes' from EventsListByNode
  Updated AddEventDialog
  Added AddEventInfoDialog

Version 0.17.0
  Added node_useSwitchTeach2
  Amended EventTeachDialog to support indexed events
  Added support for event variables for indexed events
  nodeEventsDialog now uses EventsListByNode
  Modified firmware version display to support VLCB patch number, not beta
  check node exists in layout before adding backup list
  corrected LIST_OF_BACKUPS_FOR_ALL_NODES
  Now ignores CAN_SW nodes on FCU import
  Added EventVariableCollectionSelect
  activateSlot now shows variables

Version 0.16.0
  added getListOfTokens & extractMDFTokens
  updated readme tests.md
  Now uses values for "useEventIndex", "useNENRD", "numberOfEvents" & "useSwitchTeach1"
  from mergConfig as well as MDF
  Updated backup & restore to support CANACE3(C) that uses indexed events
  Fixed issue with not setting group in add new node
  added useSlots property
  Amended jsonLogic EV operators to support indexed events
  Amended EventTeachDialog to support indexed events

Version 0.15.1
  Fixed issue in EventsListByNode not displaying bus events

Version 0.15.0
  Added REQUEST_NODE_EVENT_BY_INDEX
  Added TestDialog under develop flag
  Added Send NERD & Send NENRD under develop flag
  Added requestAllEventsByIndex utility function
  Added getter node_descriptor_useNENRD
  added getter node_descriptor_useEventIndex